@@ -1,3 +1,7 @@
+= master
+
+* Add :handle_reload_errors option, for returning backtrace with error if there is an exception when reloading (jeremyevans)
+
 = 1.6.0 (2017-02-24)
 
 * Add Unreloader#strip_path_prefix, designed to support chrooting (jeremyevans)
